--- a/src/main/resources/application2.properties
+++ b/src/main/resources/application2.properties
@@ -1,7 +1,9 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/java
-spring.datasource.username=root
-spring.datasource.password=123
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.dialect.storage_engine=innodb
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.open-in-view=true
